非同期処理用のTask生成に対応

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,12 @@
         android:onClick="onContinueWithTask" />
 
     <Button
+        android:text="Continue With Task With Callback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onContinueWithTaskWithCallback" />
+
+    <Button
         android:text="On Success Task"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
